--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,143 @@
-/* You can add global styles to this file, and also import other style files */
+
+h2 {
+    color: #ff4900;
+    font-size: 2rem;
+}
+
+p {
+    font-family: Arial, sans-serif;
+    color: #0093FF;
+    font-size: 16px;
+}
+
+p.nerko {
+    font-family: 'Nerko One', cursive;
+    color: #c500ff;
+    font-size: 12px;
+}
+
+
+a {
+    color: #001bff;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #4CAF50;
+}
+
+a:hover {
+    color: #ff6600;
+    text-decoration: underline;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th {
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 1.5rem;
+}
+
+td, th {
+    padding: 10px;
+    text-align: left;
+}
+
+tr:nth-child(1), tr:nth-child(3) {
+    background-color: #bec1c3;
+    color: #000000;
+    font-size: 1.5rem;
+}
+
+tr:nth-child(2) {
+    background-color: #045795;
+    color: #ffffff;
+    font-size: 1.5rem;
+}
+
+
+
+
+/* Estilos generales */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  body {
+    font-family: Arial, sans-serif;
+  }
+  
+  /* Contenedor principal */
+  .contenedor {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100vh;
+    background-color: #e0e0e0;
+  }
+  
+  /* Header con logo y buscador */
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #808080;
+    padding: 10px;
+  }
+  
+  .logo {
+    background-color: #ff9900;
+    padding: 20px;
+    width: 100px;
+    text-align: center;
+  }
+  
+  .buscador {
+    background-color: white;
+    padding: 20px;
+    width: 200px;
+    text-align: center;
+  }
+  
+  /* Sección principal con sidebar y contenido */
+  .main-section {
+    display: flex;
+    flex: 1;
+  }
+  
+  .sidebar {
+    width: 200px;
+    background-color: #b0b0b0;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .content {
+    flex: 1;
+    background-color: #00b050;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  /* Footer */
+  .footer {
+    display: flex;
+    background-color: #ffcc00;
+    padding: 10px;
+  }
+  
+  .footer-item {
+    flex: 1;
+    background-color: #a0a0a0;
+    padding: 20px;
+    text-align: center;
+    margin: 5px;
+  }
+  
